1.0.2
=====
 * Properly determine the capacity of complete CD-R(W) media.
 * Mark a data project as modified if files are renamed.

1.0.1
=====
 * Fixed crash when using the Device menu without a selected device.
 * Fixed DVD copy when reading from a DVD+RW.
 * Fixed --without-alsa configure check
 * Fixed a crash in Video DVD ripping when the title does not contain an audio stream
 * Only use the mkisofs parameters -biblio, -copyright, and -abstract if they have been set. Using them
   with invalid values (empty) seems to result in broken iso images sometimes.
 * Better compatibility with recent transcode development branch
 * Fixed Multisession import size handling.
 * Fixed Lame quality preset handling.
 * Made libk3bdevice really thread-safe. This fixes the disabled DMA bug!
 * New configure check --without-cdrecord-suid-root to disable K3b's check for cdrecord permissions.
   Although not recommended it is requested by many distributors.
 * Changed the order of the buttons in the tool dialogs to match the KDE order.
 * Added handling of the newly introduced genisoimage parameter -allow-limited-size
 * Make the K3b Sox audio encoder plugin work with newer sox versions (Thanks, Stephan.)

1.0
===
 * K3b now includes a VideoDVD kio slave. It can be used in Konqueror through the protocol videodvd:/
   to copy the files from a VideoDVD with on-the-fly decryption if libdvdcss is installed.
   (Be aware that in some countries it is not permitted to use libdvdcss.)
 * New Device menu containing all the actions possible for a device (like eject, unmount, ...).
   This includes the possibility of assigning shortcuts to these kind of actions.
 * K3b now warns if user parameters for external programs have been specified. This has been introduced
   because there were some bug report that were caused by faulty user parameters.
 * Cleaned up all the job classes: No job creates a widget anymore. This allows for non-GUI usage of libk3b.
   For example in a kioslave.